# Solar-System-Dynamics

./: CMakeLists.txt  Dockerfiler  README.md  binder.cpp  kirk_plot.ipynb  kirkwood_kirk.cpp  requirements.txt
.devcontainer/: devcontainer.json
body/: Body.cpp  Body.hpp  System.cpp  System.hpp  body_bindings.cpp
body/Analemma/: AOS.cpp
body/black_photon/: Black_photon.cpp
body/crtb/: Crtb.cpp
body/kirkwood/: Kirk.cpp
body/twobody/: Twobody.cpp
examples/: analemma.ipynb  black_photon.ipynb  crtb.ipynb  plots.ipynb  two_body.ipynb  twobody.ipynb
examples/outputs/: body0_run_0.csv  body0_run_1.csv  body0_run_2.csv  body0_run_3.csv  body1_run_0.csv  body1_run_1.csv  body1_run_2.csv  body1_run_3.csv  earth_analemma.csv  mar_analemma.csv  rcmf_2_run_0.csv
integrator/: integrator.cpp
phyvec/: phyvec.cpp  phyvec.hpp  phyvec_bindings.cpp
